remove workload class
